--- a/D2TEC_IFSPCps_Trabalho_1.ipynb
+++ b/D2TEC_IFSPCps_Trabalho_1.ipynb
@@ -45,11 +45,11 @@
       "cell_type": "markdown",
       "source": [
         "#2. Detalhes dos Dados \n",
-        "O banco de dados escolhido foi extraido do conjunto de dados do Portal de Dados Abertos do TSE onde sao disponibilizados à sociedade dados gerados ou custodiados pelo TSE, de forma a garantir o acesso a informacoes e aprimorar a cultura de transparência. <br>\n",
+        "O banco de dados escolhido foi extraido do conjunto de dados do Portal de Dados Abertos do TSE onde sao disponibilizados para a sociedade dados gerados ou custodiados pelo TSE, de forma a garantir o acesso a informacoes e aprimorar a cultura de transparencia. <br>\n",
         "Este portal substitui o antigo Repositorio de Dados Eleitorais, descontinuado em janeiro de 2022, e esta em constante atualizacao segundo minha observacao. <br>\n",
-        "Segundo o proprio site do TSE, os dados la disponiveis podem ser livremente acessados, utilizados, modificados e compartilhados por qualquer pessoa, com vistas à geracao de novas informacoes e iniciativas da sociedade que busquem estimular o controle social e contribuir com a melhoria da gestao pulica. <br>\n",
+        "Segundo o proprio site do TSE, os dados la disponiveis podem ser livremente acessados, utilizados, modificados e compartilhados por qualquer pessoa, com vistas a geracao de novas informacoes e iniciativas da sociedade que busquem estimular o controle social e contribuir com a melhoria da gestao pulica. <br>\n",
         "(https://dadosabertos.tse.jus.br/) <br><br>\n",
-        "O portal contem uma enormidade de dados relativos às eleicoes brasileiras como resultados detalhados de votacao das ltimas eleicoes, pesquisas eleitorais, prestacao de contas dos candidatos, perfil de eleitores, assim como dados antigos como candidatos de eleicoes antigas desde o ano de 1933. <br><br>\n",
+        "O portal contem uma enormidade de dados relativos as eleicoes brasileiras como resultados detalhados de votacao das ltimas eleicoes, pesquisas eleitorais, prestacao de contas dos candidatos, perfil de eleitores, assim como dados antigos como candidatos de eleicoes antigas desde o ano de 1933. <br><br>\n",
         "Especificamente para este trabalho foram selecionados os seguinte dados referentes ao primeiro turno da eleicao corrente de 2022:\n",
         "- Resultados de votacao por municipio e por zona (830.299KB zip) https://dadosabertos.tse.jus.br/dataset/resultados-2022/resource/40fdcf49-256a-4c81-87cf-711545bd1528 \n",
         "- Resultados de votacao por secao eleitoral no Estado de Sao Paulo (253.206KB zip) https://dadosabertos.tse.jus.br/dataset/resultados-2022/resource/5c375ecc-9c40-4c75-921c-686a920c150a\n",
